docs-page left sidebar dropdown menu alignment fix (#51)

--- a/static/assets/sass/main.css
+++ b/static/assets/sass/main.css
@@ -3372,6 +3372,9 @@ button.button.is-fullwidth {
 .appscode-style .item input:checked ~ label > a {
   color: #00A651; }
 
+.item input:checked ~ ul, .item input:checked ~ .item > ul > .item {
+  margin-left: -20px; }
+
 .kd-left-sidebar {
   margin-right: 30px;
   position: sticky;
